Major migration of model RacerId to Racer and its foreign key relationships, this is a huge cross cutting change across the entire site

--- a/core/templates/email.html
+++ b/core/templates/email.html
@@ -32,8 +32,8 @@ Race: {{ single_race_detail.racenumber }}
 <tr>
 <td>{{ result.finalpos }}</td>
 <td>
-<a href="http://{{ host }}{% url 'single_racer' track_id=single_race_detail.trackkey_id racerid_id=result.racerid.id %}">
-{{ result.racerid.racerpreferredname }}
+<a href="http://{{ host }}{% url 'single_racer' track_id=single_race_detail.trackkey_id racer_id=result.racer.id %}">
+{{ result.racer.racerpreferredname }}
 </a>
 </td>
 <td>{{ result.lapcount }}</td>
