--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -62,8 +62,8 @@ RC-Stats is a racing community to track and share your RC race results.
           <tr>
           <td>{{ forloop.counter }}</td>
           <td>
-            <a href="{% url 'single_racer' track_id=trackname.id racerid_id=koh_summary.racerid__id %}">
-            {{ koh_summary.racerid__racerpreferredname }}
+            <a href="{% url 'single_racer' track_id=trackname.id racer_id=koh_summary.racer__id %}">
+            {{ koh_summary.racer__racerpreferredname }}
             </a>
           </td>
           <td>{{ koh_summary.score }}</td>
