--- a/core/templates/king_of_the_hill/king_of_the_hill_class.html
+++ b/core/templates/king_of_the_hill/king_of_the_hill_class.html
@@ -64,8 +64,8 @@ King of the Hill for {{ official_class_name.raceclass }}
           <tr>
           <td>{{ forloop.counter }}</td>
           <td>
-            <a href="{% url 'single_racer' track_id=trackname.id racerid_id=koh_summary.racerid__id %}">
-            {{ koh_summary.racerid__racerpreferredname }}
+            <a href="{% url 'single_racer' track_id=trackname.id racer_id=koh_summary.racer__id %}">
+            {{ koh_summary.racer__racerpreferredname }}
             </a>
           </td>
           <td>{{ koh_summary.score }}</td>
