--- a/uploadresults/templates/easyupload_validate.html
+++ b/uploadresults/templates/easyupload_validate.html
@@ -40,7 +40,7 @@ Total time required for upload: {{ total_uploadtime }}
   </div>
   {% else %}
 
-  <h4>{{ resultpage.upload_record.trackname }}</h4>
+  <h4>{{ resultpage.upload_record.track }}</h4>
   <p>
 
   Upload Start: {{ resultpage.upload_record.uploadstart }}</br>
