--- a/core/templates/racer_list/single_racer_race_list.html
+++ b/core/templates/racer_list/single_racer_race_list.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block description %}
-{{ trackname.trackname }} Results for {{ racer.racerpreferredname }}
+{{ track.name }} Results for {{ racer.racerpreferredname }}
 {% endblock %}
 
 {% block stylesheet %}
@@ -15,13 +15,13 @@
 {% block content %}
 <div class="container well">
   <h3>
-    <a href="{% url 'single_racer' track_id=trackname.id racer_id=racer.id %}">
+    <a href="{% url 'single_racer' track_id=track.id racer_id=racer.id %}">
       {{ racer.racerpreferredname }}
     </a>
   </h3>
   <h4>
-    <a href="{% url 'racer-list-by-track' track_id=trackname.id %}">
-      {{ trackname.trackname }}
+    <a href="{% url 'racer-list-by-track' track_id=track.id %}">
+      {{ track.name }}
     </a>
   </h4>
   
